# stocks

IRP/k-allweather/: k-allweather.py  pyproject.toml
IRP/k-allweather/result/: K_AllWeather_20251103_1356.xlsx  K_AllWeather_20251104_1351.xlsx  K_AllWeather_20251117_0912.xlsx  test.txt  (+2 more)
IRP/rebalancing/: README.md  pyproject.toml  rebalance.py  rebalance_now_20251021_1700.xlsx
ISA/: README.md  dualm-choice.csv  dualm.py  dualmomentom.py  laa.py  pyproject.toml  vaa.py
ISA/backup/: dualmomentom_efa.py  vaa_test.py
ISA/dual_momentum_isa/: DualMomentum_ISA_Alt3_2026-01.xlsx
ISA/dual_momentum_isa/old/: DualMomentum_ISA_Alt3_2025-12.xlsx  DualMomentum_ISA_Alt3_2026-01.xlsx  dualmo_report_2025-11.xlsx  dualmo_report_2025-12.xlsx  dualmo_report_v2_2025-12.xlsx
ISA/dual_momentum_out/: dualmo_report_2025-10.xlsx  dualmo_report_2025-11.xlsx  dualmo_report_2025-12.xlsx
ISA/laa_out/: laa_report_2025-10.xlsx  laa_report_2025-11.xlsx  laa_report_2025-12.xlsx  laa_report_2026-01.xlsx  laa_signals.csv
ISA/laa_out/old/: laa_report_2025-11.xlsx  laa_report_2025-12.xlsx  laa_report_2026-01.xlsx
ISA/vaa_out/: vaa_composite_report_2026-01.xlsx  vaa_report_2025-10.xlsx  vaa_report_2025-11.xlsx  vaa_report_2025-12.xlsx
ISA/vaa_out/old/: vaa_composite_report_2025-12.xlsx  vaa_composite_report_2026-01.xlsx  vaa_report_2025-12.xlsx
Stock/: 144600_Turtle_Analysis_V2.xlsx  [ST&ETF]079550.xlsx  [ST&ETF]080220.xlsx  cripto_tuttle_atr.py  pyproject.toml  tuttle_atr.py
Stock/backup/: tuttle_atr.py
test/streamlit_vaa/: main.py  pyproject.toml
tmp/: backup_vaa.py
(+2 files in other folders)
