[project]
name = "stock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "finance-datareader>=0.9.96",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-datareader>=0.10.0",
    "python-dateutil>=2.9.0.post0",
    "pyupbit>=0.2.34",
    "setuptools>=80.9.0",
    "xlsxwriter>=3.2.9",
    "yfinance>=0.2.66",
]
